--- a/src/components/App.css
+++ b/src/components/App.css
@@ -30,11 +30,13 @@
 }
 
 input[type=text] {
-  width: 250px;
+  width: 50%;
 }
 
 .search-bar {
   margin: 10px;
+  padding: 10px;
+  display: inline-block;
 }
 
 .summary {
