--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,7 @@
 .App {
-  text-align: center;
   display: flex;
   flex-flow: column wrap;
+  justify-content: center;
 }
 
 .App-logo {
@@ -14,6 +14,7 @@
   height: 150px;
   padding: 20px;
   color: white;
+  text-align: center;
 }
 
 .App-title {
@@ -30,17 +31,17 @@
 }
 
 input[type=text] {
-  width: 50%;
+  width: 100%;
 }
 
 .search-bar {
-  margin: 10px;
+  width: 100%;
   padding: 10px;
-  display: inline-block;
 }
 
 .summary {
   margin: 10px;
+  width: 100%;
 }
 
 .transaction-summary {
