--- a/src/components/App.css
+++ b/src/components/App.css
@@ -32,6 +32,7 @@
 
 input[type=text] {
   width: 100%;
+  text-align: center;
 }
 
 .search-bar {
@@ -41,7 +42,6 @@ input[type=text] {
 
 .summary {
   margin: 10px;
-  width: 100%;
 }
 
 .transaction-summary {
